Update generic metrics for Average Miles for each mode (selected by users) chart, and update generic metrics sensed notebook for Average miles per transport mode selected (primary_mode).

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -312,6 +312,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d76d1961",
+   "metadata": {},
+   "source": [
+    "### Average Miles for each mode (selected by users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca97088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=\" Average Miles for each mode (selected by users)\"\n",
+    "file_name ='average_miles_mode_confirm2%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    data = miles.sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    x='Mode_confirm'\n",
+    "    y='Average (miles)'\n",
+    "    y2=\"Count\"\n",
+    "    \n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "\n",
+    "    barplot_mode2(data,x,y,y2,plot_title,expanded_ct['Mode_confirm'].dropna().unique().tolist(),file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "sound-bradley",
    "metadata": {},
    "source": [
