--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -32,6 +32,7 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {}"
+    "use_imperial = False"
    ]
   },
   {
@@ -215,12 +216,17 @@
    },
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Mode confirmations for trips under 10 Miles\"\n",
+    "if use_imperial:\n",
+    "    dist_threshold_txt = \"10 Miles\"\n",
+    "else:\n",
+    "    dist_threshold_txt = \"16.1 Kilometers\"\n",
+    "    \n",
+    "plot_title_no_quality=\"Mode confirmations for trips under \" + dist_threshold_txt\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
+    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< \" + dist_threshold_txt, include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
     "    pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
