--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -184,7 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Number of trips for each purposes (selected by users)\"\n",
+    "plot_title_no_quality=\"Number of trips for each purpose (selected by users)\"\n",
     "file_name= 'ntrips_purpose%s' % file_suffix\n",
     "\n",
     "try:\n",
@@ -255,30 +255,56 @@
    },
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Miles for each mode (selected by users)\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=\"Miles for each mode (selected by users)\"\n",
+    "else:\n",
+    "    plot_title_no_quality=\"Kilometers for each mode (selected by users)\"\n",
+    "    \n",
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "    miles = miles.reset_index()\n",
-    "    miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "    if use_imperial:\n",
+    "        miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
+    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
+    "        miles = miles.reset_index()\n",
+    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "    #data\n",
-    "    miles_dict = dict(zip(miles['Mode_confirm'], miles['Total (miles)']))\n",
+    "        #data\n",
+    "        miles_dict = dict(zip(miles['Mode_confirm'], miles['Total (miles)']))\n",
     "\n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
     "\n",
-    "    for x, y in miles_dict.items():\n",
-    "        labels_m.append(x)\n",
-    "        values_m.append(y)\n",
-    "        \n",
-    "    plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
+    "        for x, y in miles_dict.items():\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
     "\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "    print(miles)\n",
+    "        plot_title=plot_title_no_quality + '\\n' + quality_text\n",
+    "\n",
+    "        pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(miles)\n",
+    "    else:\n",
+    "        kilometers = expanded_ct.groupby('Mode_confirm').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
+    "        kilometers = kilometers.reset_index()\n",
+    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "\n",
+    "        #data\n",
+    "        kilometers_dict = dict(zip(kilometers['Mode_confirm'], kilometers['Total (kilometers)']))\n",
+    "\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
+    "\n",
+    "        for x, y in kilometers_dict.items():\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
+    "\n",
+    "        plot_title=plot_title_no_quality + '\\n' + quality_text\n",
+    "\n",
+    "        pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(kilometers)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
@@ -299,18 +325,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\" Average Miles for each mode with > 3 entries\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=\" Average Miles for each mode with > 3 entries\"\n",
+    "else:\n",
+    "    plot_title_no_quality=\" Average Kilometers for each mode with > 3 entries\"\n",
+    "\n",
     "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "    x='Mode_confirm'\n",
-    "    y='Average (miles)'\n",
-    "    \n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    if use_imperial:\n",
+    "        data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "        x='Mode_confirm'\n",
+    "        y='Average (miles)'\n",
     "\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "\n",
+    "        barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)\n",
+    "    else:\n",
+    "        data = kilometers.drop((kilometers.query(\"Count < 3\").index)).sort_values(by=['Average (kilometers)'], ascending=False)\n",
+    "        x='Mode_confirm'\n",
+    "        y='Average (kilometers)'\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "\n",
+    "        barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (kilometers)'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
