use_imperial in generic_metrics_sensed
similar to generic_metrics, updated the notebook to show "trips < 16.1 kms" (superficial/text change) and to display metrics in terms of kilometers instead of miles, using the new distance_kms column from expanded_ct

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -31,6 +31,7 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
+    "use_imperial = False\n",
     "sensed_algo_prefix = \"cleaned\""
    ]
   },
@@ -132,7 +133,11 @@
    },
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Number of trips under 10 Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=\"Number of trips under 10 Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "else:\n",
+    "    plot_title_no_quality=\"Number of trips under 16.1 Kilometers for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "    \n",
     "file_name ='ntrips_under10miles_sensed_mode%s' % file_suffix\n",
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
@@ -166,30 +171,56 @@
    },
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=\"Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "else:\n",
+    "    plot_title_no_quality=\"Kilometers for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "\n",
     "file_name ='miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "    miles = miles.reset_index()\n",
-    "    miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "    if use_imperial:\n",
+    "        miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
+    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
+    "        miles = miles.reset_index()\n",
+    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "    #data\n",
-    "    miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
+    "        #data\n",
+    "        miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
     "\n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
     "\n",
-    "    for x, y in miles_dict.items():\n",
-    "        labels_m.append(x)\n",
-    "        values_m.append(y)\n",
-    "        \n",
-    "    plot_title=\"Miles for each mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "        for x, y in miles_dict.items():\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
     "\n",
-    "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "    print(miles)\n",
+    "        plot_title=\"Miles for each mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "\n",
+    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(miles)\n",
+    "    else:\n",
+    "        kilometers = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
+    "        kilometers = kilometers.reset_index()\n",
+    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "\n",
+    "        #data\n",
+    "        kils_dict = dict(zip(kilometers['primary_mode'], kilometers['Total (kilometers)']))\n",
+    "\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
+    "\n",
+    "        for x, y in kils_dict.items():\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
+    "\n",
+    "        plot_title=\"Kilometers for each mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "\n",
+    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(kilometers)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
@@ -214,27 +245,50 @@
     "file_name ='miles_sensed_mode_land%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "    miles = miles.reset_index()\n",
-    "    miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "    if use_imperial:\n",
+    "        miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
+    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
+    "        miles = miles.reset_index()\n",
+    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "    #data\n",
-    "    miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
+    "        #data\n",
+    "        miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
     "\n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
     "\n",
-    "    for x, y in miles_dict.items():\n",
-    "        if x != \"AIR_OR_HSR\":\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
-    "        \n",
-    "    plot_title=\"Miles for each land-based mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "        for x, y in miles_dict.items():\n",
+    "            if x != \"AIR_OR_HSR\":\n",
+    "                labels_m.append(x)\n",
+    "                values_m.append(y)\n",
     "\n",
-    "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "    print(miles)\n",
+    "        plot_title=\"Miles for each land-based mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "\n",
+    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(miles)\n",
+    "    else:\n",
+    "        kilometers = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
+    "        kilometers = kilometers.reset_index()\n",
+    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "\n",
+    "        #data\n",
+    "        kils_dict = dict(zip(kilometers['primary_mode'], kilometers['Total (kilometers)']))\n",
+    "\n",
+    "        labels_m = []\n",
+    "        values_m = []\n",
+    "\n",
+    "        for x, y in kils_dict.items():\n",
+    "            if x != \"AIR_OR_HSR\":\n",
+    "                labels_m.append(x)\n",
+    "                values_m.append(y)\n",
+    "\n",
+    "        plot_title=\"Kilometers for each land-based mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "\n",
+    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "        print(kilometers)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
