--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -28,7 +28,8 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
-    "dynamic_labels = {}"
+    "dynamic_labels = {}\n",
+    "use_imperial = True"
    ]
   },
   {
@@ -105,14 +106,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if len(dynamic_labels) > 0:\n",
-    "    # Get timestamp from known year/month/day aggregated to days\n",
-    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
-    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
-    "else:\n",
+    "if use_imperial:\n",
     "    # Get timestamp from known year/month/day aggregated to days\n",
     "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "else:\n",
+    "     # Get timestamp from known year/month/day aggregated to days\n",
+    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
+    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
     "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
@@ -181,10 +182,10 @@
     "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
-    "        if (len(dynamic_labels)) > 0:\n",
-    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')\n",
+    "        if use_imperial:\n",
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')            \n",
     "        else:\n",
-    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')"
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')"
    ]
   },
   {
@@ -223,10 +224,10 @@
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "\n",
     "try:\n",
-    "    if (len(dynamic_labels)) > 0:\n",
-    "        plot_emission_per_week(emissions, 'kg', active_users)\n",
-    "    else:\n",
+    "    if use_imperial:\n",
     "        plot_emission_per_week(emissions, 'lb', active_users)\n",
+    "    else:\n",
+    "        plot_emission_per_week(emissions, 'kg', active_users)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -293,10 +294,10 @@
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "\n",
     "try:\n",
-    "    if (len(dynamic_labels) > 0):\n",
-    "        plot_emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
-    "    else:\n",
+    "    if use_imperial:\n",
     "        plot_emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
+    "    else:\n",
+    "        plot_emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
