energy calculations notebook to use imperial
In this case, we were already switching on the length of the dynamic labels, this is a more principled reliance on the input use_imperial that we will take from the config

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -32,7 +32,8 @@
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
     "is_debug_mode = False\n",
-    "dynamic_labels = {}"
+    "dynamic_labels = {}\n",
+    "use_imperial = True"
    ]
   },
   {
@@ -248,10 +249,10 @@
     "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_debug, dynamic_labels)\n",
     "\n",
     "try:\n",
-    "    if (len(dynamic_labels) > 0):\n",
-    "        display_total_CO2_emissions(data_eb,'kg','lb', mode_of_interest)\n",
-    "    else:\n",
+    "    if use_imperial:\n",
     "        display_total_CO2_emissions(data_eb,'lb','kg', mode_of_interest)\n",
+    "    else:\n",
+    "        display_total_CO2_emissions(data_eb,'kg','lb', mode_of_interest)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
