--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -32,7 +32,8 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "use_imperial = False\n",
-    "sensed_algo_prefix = \"cleaned\""
+    "sensed_algo_prefix = \"cleaned\"\n",
+    "use_imperial = True"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "id": "crucial-keyboard",
    "metadata": {},
    "source": [
-    "### Mode choice for trips under 10 miles"
+    "### Mode choice for trips under 80% mark"
    ]
   },
   {
@@ -133,23 +134,33 @@
    },
    "outputs": [],
    "source": [
+    "#determine 80th percentile\n",
+    "cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "\n",
     "if use_imperial:\n",
-    "    plot_title_no_quality=\"Number of trips under 10 Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "    dist_unit = \"miles\"\n",
+    "    dist_threshold = expanded_ct.distance_miles.quantile(0.8).round(1)\n",
     "else:\n",
-    "    plot_title_no_quality=\"Number of trips under 16.1 Kilometers for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
-    "    \n",
+    "    dist_unit = \"kilometers\"\n",
+    "    dist_threshold = expanded_ct.distance_kms.quantile(0.8).round(1)\n",
+    "\n",
+    "dist_threshold = str(dist_threshold)\n",
+    "plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + dist_unit + \" for each primary mode\"\n",
+    "plot_title_no_quality=plot_title_no_quality + \"\\n(inferred by OpenPATH from phone sensors)\" \n",
+    "plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + dist_unit+\" represents 80th percentile of trip length]\"\n",
     "file_name ='ntrips_under10miles_sensed_mode%s' % file_suffix\n",
+    "\n",
     "try:\n",
-    "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
-    "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].primary_mode.value_counts(dropna=True).tolist()\n",
-    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
+    "    labels_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
+    "    values_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).tolist()\n",
+    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + dist_unit, include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
     "    pie_chart_sensed_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
-    "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].primary_mode.value_counts(dropna=True))\n",
+    "    print(expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True))\n",
     "except:\n",
-    "    d10_df = expanded_ct.query(\"distance_miles <= 10\") if \"distance_miles\" in expanded_ct.columns else expanded_ct\n",
-    "    debug_df.loc[\"Trips_less_than_10_miles\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
+    "    d10_df = expanded_ct.query(\"distance <= \" + cutoff) if \"distance\" in expanded_ct.columns else expanded_ct\n",
+    "    debug_df.loc[\"Trips_less_than_80th_pct\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
