customize mode timeseries to imperial vs metric
adding the ability to display each of these charts in miles OR kilometers

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -22,13 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "dynamic_labels = { }\n",
+    "use_imperial = False"
    ]
   },
   {
@@ -128,7 +129,7 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
-    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
+    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles', 'distance_kms']\n",
     "sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm']\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
@@ -167,14 +168,24 @@
     "        mode_counts = data.groupby(['user_id','date_time','mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
-    "        # Sum daily distance traveled for each mode\n",
-    "        mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "        mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "        mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
+    "        if use_imperial:\n",
+    "            # Sum daily distance traveled for each mode\n",
+    "            mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
+    "            mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
+    "            mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
     "\n",
-    "        # Add 7-day rolling avg smoothing to better see trends\n",
-    "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            # Add 7-day rolling avg smoothing to better see trends\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        else:\n",
+    "             # Sum daily distance traveled for each mode\n",
+    "            mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_kms']].sum()\n",
+    "            mode_distance.rename(columns={'sum':'distance_kms'}, inplace=True)\n",
+    "            mode_distance['distance_kms'] = mode_distance['distance_kms'].fillna(0)\n",
+    "\n",
+    "            # Add 7-day rolling avg smoothing to better see trends\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_kms_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_kms'].apply(lambda x: x.rolling(7,1).mean())\n",
     "        \n",
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
@@ -242,18 +253,26 @@
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage across all users\n",
-    "plot_title_no_quality = f'Daily {mode_of_interest} Mileage'\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance (miles)'\n",
+    "else:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance (kilometers)'\n",
+    "\n",
     "file_name = f\"ts_{mode_of_interest}_miles%s\"%file_suffix\n",
     "\n",
     "try:\n",
     "    if len(mode_counts_interest) == 0:\n",
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
-    "\n",
-    "    plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
-    "\n",
+    "    \n",
+    "    if use_imperial:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
+    "        ylab = 'Miles'\n",
+    "    else:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_kms'].agg(['sum']).reset_index()\n",
+    "        ylab = 'Kilometers'\n",
+    "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Miles'\n",
     "\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
@@ -272,11 +291,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage normalized by number of users\n",
-    "plot_title_no_quality = f'Daily {mode_of_interest} Mileage per Active User'\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance per Active User (miles)'\n",
+    "else:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance per Active User (kilometers)'\n",
     "file_name = f\"ts_{mode_of_interest}_miles_user%s\"%file_suffix\n",
     "\n",
     "try:\n",
@@ -284,14 +308,19 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
+    "    if use_imperial:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
+    "        ylab = 'miles/user'\n",
+    "    else:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_kms'].agg(['sum']).reset_index()\n",
+    "        ylab = 'kilometers/user'\n",
+    "        \n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "    plot_data['mileage_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
+    "    plot_data['distance_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'miles/user'\n",
     "\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['distance_per_user'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -312,7 +341,13 @@
    "outputs": [],
    "source": [
     "# Plot of ebike mileage share proportion across all users\n",
-    "plot_title_no_quality = f'Daily {mode_of_interest} Mileage Proportion (All Users, excluding air)'\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance Proportion (All Users, excluding air)'\n",
+    "    ylab = 'Proportion of Daily Miles'\n",
+    "else:\n",
+    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance Proportion (All Users, excluding air)'\n",
+    "    ylab = 'Proportion of Daily Kilometers'\n",
+    "    \n",
     "file_name = f\"ts_{mode_of_interest}_miles_proportion%s\"%file_suffix\n",
     "\n",
     "try:\n",
@@ -320,15 +355,21 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "    total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "    plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
-    "    plot_data['miles_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
+    "    if use_imperial:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "        total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "        plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
+    "        plot_data['dist_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
+    "    else:\n",
+    "        plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_kms_smooth'].sum()\n",
+    "        total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_kms_smooth'].sum()\n",
+    "        plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
+    "        plot_data['dist_proportion'] = plot_data['distance_kms_smooth_x'] / plot_data['distance_kms_smooth_y']\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Proportion of Daily Miles'\n",
+    "    \n",
     "\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['dist_proportion'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -446,16 +487,21 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
-    "    plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "    plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
-    "    plot_data['mode_miles_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
-    "\n",
+    "    if use_imperial:\n",
+    "        plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
+    "        plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "        plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
+    "        plot_data['mode_dist_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
+    "    else:\n",
+    "        plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_kms_smooth\"].sum()\n",
+    "        plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_kms_smooth'].sum()\n",
+    "        plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
+    "        plot_data['mode_dist_proportion'] = plot_data['distance_kms_smooth_y'] / plot_data['distance_kms_smooth_x']\n",
+    "        \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Proportion of Daily Miles'\n",
     "\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
-    "    alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['mode_dist_proportion'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
