use_imperial in generic_timeseries
some issues with the dashboard, identified and fixed not fully using the use_imperial switch

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -111,7 +111,7 @@
     "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
     "else:\n",
-    "     # Get timestamp from known year/month/day aggregated to days\n",
+    "    # Get timestamp from known year/month/day aggregated to days\n",
     "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
     "\n",
@@ -120,24 +120,24 @@
     "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
     "    data = expanded_ct[sel_cols_no_label_dep].copy()\n",
     "else:\n",
+    "    #add mode confirm related columns if labeled\n",
     "    data = expanded_ct[sel_cols_with_label_dep].copy()\n",
     "    \n",
-    "if len(expanded_ct) > 0:\n",
-    "    data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
-    "    data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
-    "    data = data.drop(columns=['year','month','day'])\n",
+    "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
+    "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
+    "data = data.drop(columns=['year','month','day'])\n",
+    "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
+    "data.user_id = pd.Categorical(data.user_id)\n",
+    "data.date_time = pd.Categorical(data.date_time)\n",
     "\n",
-    "    # Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
-    "    data.user_id = pd.Categorical(data.user_id)\n",
-    "    data.date_time = pd.Categorical(data.date_time)\n",
-    "    \n",
-    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "        if (len(dynamic_labels) > 0):\n",
-    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
-    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
-    "        else:\n",
-    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "data.head()"
+    "if \"Mode_confirm\" in expanded_ct.columns:\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "        dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
+    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
+    "    else:\n",
+    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "\n",
+    "        data.head()"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
     "        if use_imperial:\n",
-    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')            \n",
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')\n",
     "        else:\n",
     "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')"
    ]
