running through the notebooks
running the notebooks, some had odd updates and were missing some syntax causing bugs

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -25,13 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
-    "dynamic_labels = {}"
+    "dynamic_labels = {}\n",
     "use_imperial = False"
    ]
   },
@@ -440,6 +440,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "72076fd04c06dcef1e530b48973026eda7036413ff5a3be73ace452fcce0cab6"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -455,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
