--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
-    "use_imperial = True"
+    "use_imperial = False"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
