--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -25,13 +25,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\"\n",
+    "mode_of_interest = \"train\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "dynamic_labels = { }\n",
+    "use_imperial = True"
    ]
   },
   {
@@ -151,6 +152,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dcc0db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20b4f86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct.mode_confirm.unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "loaded-expert",
    "metadata": {},
@@ -217,16 +238,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Distribution of Miles Replaced by {mode_of_interest}\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=f\"Distribution of Miles Replaced by {mode_of_interest}\"\n",
+    "else:\n",
+    "    plot_title_no_quality=f\"Distribution of Kilometers Replaced by {mode_of_interest}\"\n",
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
-    "    dg = dg.reset_index()\n",
-    "    dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
+    "    if use_imperial:\n",
+    "        dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
+    "        dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
+    "        dg = dg.reset_index()\n",
+    "        dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
     "\n",
-    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
+    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
+    "    else:\n",
+    "        dg=data_eb.groupby('Replaced_mode').agg({'distance_kms': ['sum', 'count' , 'mean']},)\n",
+    "        dg.columns = ['Total (kilometers)', 'Count' ,'Average (kilometers)']\n",
+    "        dg = dg.reset_index()\n",
+    "        dg = dg.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "\n",
+    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (kilometers)']))\n",
+    "    \n",
     "    labels_m = []\n",
     "    values_m = []\n",
     "\n",
@@ -258,18 +291,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
+    "if use_imperial:\n",
+    "    plot_title_no_quality=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
+    "else:\n",
+    "    plot_title_no_quality=\"Average Kilometers for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
+    "\n",
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "    x='Replaced_mode'\n",
-    "    y='Average (miles)'\n",
-    "    y2 = \"Count\"\n",
+    "    if use_imperial:\n",
+    "        data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "        x='Replaced_mode'\n",
+    "        y='Average (miles)'\n",
+    "        y2 = \"Count\"\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)\n",
+    "    else:\n",
+    "        data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (kilometers)'], ascending=False)\n",
+    "        x='Replaced_mode'\n",
+    "        y='Average (kilometers)'\n",
+    "        y2 = \"Count\"\n",
+    "\n",
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
+    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (kilometers)'].values, data.Replaced_mode), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -349,6 +396,14 @@
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "732d0c70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -367,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
