mute errors, correct the scaffolding text
see discussion here: https://github.com/e-mission/em-public-dashboard/issues/115

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -175,8 +175,9 @@
     "            mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
     "\n",
     "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "\n",
     "        else:\n",
     "             # Sum daily distance traveled for each mode\n",
     "            mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_kms']].sum()\n",
@@ -184,8 +185,8 @@
     "            mode_distance['distance_kms'] = mode_distance['distance_kms'].fillna(0)\n",
     "\n",
     "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_kms_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_kms'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_distance['distance_kms_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)['distance_kms'].apply(lambda x: x.rolling(7,1).mean())\n",
     "        \n",
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
@@ -195,8 +196,7 @@
     "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
     "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
     "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)\n",
-    "        quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)\n",
-    "        "
+    "        quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['mode_confirm'] == mode_of_interest], mode_of_interest, include_test_users)"
    ]
   },
   {
