--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\" Average Miles for each mode with > 3 entries\"\n",
+    "plot_title_no_quality=\" Average Miles for each mode with > 3 entries\\n(inferred by OpenPATH from phone sensors)\"\n",
     "file_name ='average_miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
@@ -265,9 +265,7 @@
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
-    "    print(expanded_ct['primary_mode'].dropna().unique().tolist())\n",
     "    barplot_sensed_mode(data,x,y,plot_title, expanded_ct['primary_mode'].dropna().unique().tolist(), file_name)\n",
-    "    print(\"Next\")\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['primary_mode']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
