Pass unfiltered mode lists from both generic and mode_specific metrics notebook to generate pie charts.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -31,6 +31,9 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
+    "mode_labels = {}\n",
+    "purpose_labels = {}\n",
+    "replaced_labels = {}\n",
     "dynamic_labels = {}"
    ]
   },
@@ -126,7 +129,7 @@
     "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
     "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()    \n",
     "    plot_title = plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_mc,values_mc,mode_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct['Mode_confirm'].value_counts(dropna=True))\n",
     "except:\n",
@@ -158,7 +161,7 @@
     "    values_mc = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+commute_quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_mc,values_mc,mode_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "except:\n",
     "    debug_df.loc[\"Commute_trips\"] = len(expanded_ct.query(trip_purpose_query)) if \"Trip_purpose\" in expanded_ct.columns else 0\n",
@@ -190,7 +193,7 @@
     "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,purpose_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "    print(expanded_ct['Trip_purpose'].value_counts(dropna=True))\n",
     "except:\n",
@@ -222,7 +225,7 @@
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
-    "    pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_d10,values_d10,mode_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
@@ -270,7 +273,7 @@
     "        \n",
     "    plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,mode_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "    print(miles)\n",
     "except:\n",
