--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -31,7 +31,10 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "mode_labels = {}\n",
+    "purpose_labels = {}\n",
+    "replaced_labels = {}\n",
+    "dynamic_labels = {}"
    ]
   },
   {
@@ -174,7 +177,7 @@
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,purpose_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -195,7 +198,7 @@
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_eb,values_eb,replaced_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -235,7 +238,7 @@
     "        values_m.append(y)\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,replaced_labels,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "    print(dg)\n",
     "except:\n",
