Extract unfiltered list of mode, purpose, replaced mode labels for generic metrics notebook at top level.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -97,6 +97,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75896a28",
+   "metadata": {},
+   "source": [
+    "### Unfiltered Lists of mode, purpose and replaced mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049c514c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "replaced_labels_unfiltered = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "modified-skiing",
    "metadata": {},
    "source": [
