--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -110,6 +110,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9704f9f8",
+   "metadata": {},
+   "source": [
+    "### Unfiltered Lists of mode, purpose and replaced mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc043a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "replaced_labels_unfiltered = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "77eedae6",
